# libcocanb

./: .clang-format  .gitignore  CMakeLists.txt  Makefile.am  README.md  configure.ac  test.c
include/: cocanb.h
src/: Makefile.am  cocanb.c  encode.c  to_cocanb.c
src/core/: cocanb.c  encode.c
tests/: Makefile.am  cocanb-basic.c  cocanb-quotes.c  cocanb.test.c  encode-basic.c  encode-number.c  encode-paren.c  encode-quote.c
